manifest/network_policy/allowd_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-pod
  labels:
    access: allowed
spec:
  containers:
    - name: busybox
      image: busybox
      command: ["sleep", "3600"]
