manifest/network_policy/blocked_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: blocked-pod
spec:
  containers:
    - name: busybox
      image: busybox
      command: ["sleep", "3600"]
